# ShowQt5Location-android-cmake-qmake

./: .gitmodules  CMakeLists.txt  TestGeo.pro  main.cpp  readme.md
android_stuff/: AndroidManifest.xml
